--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -47,11 +47,11 @@ menu-active
                         <li>
                             <strong>1</strong> Mini TV</li>
                         <li>
-                            <strong>1</strong> Fan</li>
+                            <strong>1</strong> Fan &nbsp;Laptop</li>
                         <li>
-                            <strong>4</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder</li>
+                            <strong></strong> Decoder</li>
                     </ul>
                 </div>
             </div>
@@ -74,11 +74,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>1</strong> Fan</li>
+                            <strong>1</strong> Fan &nbsp;Laptop</li>
                         <li>
-                            <strong>4</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder</li>
+                            <strong></strong> Decoder</li>
                     </ul>
                 </div>
             </div>
@@ -101,11 +101,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>2</strong> Fans</li>
+                            <strong></strong> Fans &nbsp;Laptops</li>
                         <li>
-                            <strong>8</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -117,7 +117,7 @@ menu-active
                         <span>
                             <strong>750w</strong> Module
                             <br />
-                            <strong>2kva</strong> Inverter
+                            <strong>2.5kva</strong> Inverter
                             <br />
                             <strong>200ah</strong> battery
                             <br />
@@ -128,11 +128,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>4</strong> Fans</li>
+                            <strong></strong> Fans &nbsp;Laptops</li>
                         <li>
-                            <strong>10</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -155,11 +155,11 @@ menu-active
                         <li>
                             <strong>2</strong> TV</li>
                         <li>
-                            <strong>5</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
                         <li>
-                            <strong>14</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -181,14 +181,14 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
-                            <strong>5</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Fridge/Freezer</li>
                         <li>
-                            <strong>16</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -210,14 +210,14 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
-                            <strong>6</strong> Fans</li>
+                            <strong></strong> Fans &nbsp;Laptops</li>
 
                         <li>
                             <strong>1</strong> Fridge/Freezer</li>
                         <li>
-                            <strong>16</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
@@ -238,14 +238,16 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>5</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
-                            <strong>1</strong> Freezer/Laptop</li>
+                            <strong>1</strong> Freezer &nbsp;
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>20</strong> Lighting points</li>
+                            <strong>All</strong> Light points &nbsp;
+                            <strong></strong> Laptops</li></li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -261,22 +263,22 @@ menu-active
                             <br />
                             <strong>800ah</strong> Battery
                             <br />
-                            <strong>80amp</strong> Controller</span>
+                            <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>4</strong> Fans</li>
+                            <strong></strong> Fans</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>24</strong> Lighting points &nbsp;
-                            <strong>2</strong> Laptops</li>
+                            <strong>All</strong> Light points &nbsp;
+                            <strong></strong> Laptops</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -292,22 +294,22 @@ menu-active
                             <br />
                             <strong>800ah</strong> Battery
                             <br />
-                            <strong>100amp</strong> Controller</span>
+                            <strong>120amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>6</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>28</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>1</strong> AC(1HP)</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -323,22 +325,22 @@ menu-active
                             <br />
                             <strong>1000ah</strong> Battery
                             <br />
-                            <strong>100amp</strong> Controller</span>
+                            <strong>140amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>8</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>32</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>2</strong> AC(1HP)</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -354,19 +356,19 @@ menu-active
                             <br />
                             <strong>1200ah</strong> Battery
                             <br />
-                            <strong>120amp</strong> Controller</span>
+                            <strong>160amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>8</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> Washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>35</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>3</strong> AC(1HP)</li>
                         <li>
                             <strong>1</strong> Decoder/Home theater</li>
