--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -359,7 +359,7 @@
         var x = document.getElementsByTagName('script')[0];
         x.parentNode.insertBefore(s, x);
     </script>            
-    <script type="text/javascript">
+    <script>
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
