--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -400,11 +400,11 @@ menu-active
                         <li>
                             <strong>1</strong> Mini TV</li>
                         <li>
-                            <strong>1</strong> Fan</li>
+                            <strong>1</strong> Fan &nbsp;Laptop</li>
                         <li>
-                            <strong>4</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder</li>
+                            <strong></strong> Decoder</li>
                     </ul>
                 </div>
             </div>
@@ -429,11 +429,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>1</strong> Fan</li>
+                            <strong>1</strong> Fan &nbsp;Laptop</li>
                         <li>
-                            <strong>4</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder</li>
+                            <strong></strong> Decoder</li>
                     </ul>
                 </div>
             </div>
@@ -457,11 +457,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>2</strong> Fans</li>
+                            <strong></strong> Fans &nbsp;Laptops</li>
                         <li>
-                            <strong>8</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -475,7 +475,7 @@ menu-active
                         <span>
                             <strong>750w</strong> Module
                             <br />
-                            <strong>1.5kva</strong> Inverter
+                            <strong>2.5kva</strong> Inverter
                             <br />
                             <strong>200ah</strong> battery
                             <br />
@@ -486,11 +486,11 @@ menu-active
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
-                            <strong>4</strong> Fans</li>
+                            <strong></strong> Fans &nbsp;Laptops</li>
                         <li>
-                            <strong>10</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -514,11 +514,11 @@ menu-active
                         <li>
                             <strong>2</strong> TV</li>
                         <li>
-                            <strong>5</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
                         <li>
-                            <strong>14</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -541,14 +541,13 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
-                            <strong>5</strong> Fans</li>
-
+                            <strong></strong> Fans &nbsp; Laptops</li>
                         <li>
                             <strong>1</strong> Fridge/Freezer</li>
                         <li>
-                            <strong>16</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -571,14 +570,13 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
-                            <strong>6</strong> Fans</li>
-
+                            <strong></strong> Fans &nbsp;Laptops</li>
                         <li>
                             <strong>1</strong> Fridge/Freezer</li>
                         <li>
-                            <strong>16</strong> Lighting points</li>
+                            <strong>All</strong> Light points</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                 </div>
             </div>
 
@@ -600,14 +598,15 @@ menu-active
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>5</strong> Fans</li>
-
+                            <strong></strong> Fans &nbsp; Laptops</li>
                         <li>
-                            <strong>1</strong> Freezer/Laptop</li>
+                            <strong>1</strong> Freezer &nbsp;
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>20</strong> Lighting points</li>
+                            <strong>All</strong> Light points &nbsp;
+                            <strong></strong> Laptops</li></li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -624,21 +623,22 @@ menu-active
                             <br />
                             <strong>800ah</strong> Battery
                             <br />
-                            <strong>80amp</strong> Controller</span>
+                            <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>4</strong> Fans</li>
+                            <strong></strong> Fans</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>2</strong> Laptops</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>24</strong> Lighting points</li>
+                            <strong>All</strong> Light points &nbsp;
+                            <strong></strong> Laptops</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -655,22 +655,22 @@ menu-active
                             <br />
                             <strong>800ah</strong> Battery
                             <br />
-                            <strong>100amp</strong> Controller</span>
+                            <strong>120amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>6</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>28</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>1</strong> AC(1HP)</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -683,26 +683,26 @@ menu-active
                         <span>
                             <strong>6kw</strong> Module
                             <br />
-                            <strong>3.5kw</strong> Inveter
+                            <strong>5kw</strong> Inveter
                             <br />
                             <strong>1000ah</strong> Battery
                             <br />
-                            <strong>100amp</strong> Controller</span>
+                            <strong>140amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>8</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>32</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>2</strong> AC(1HP)</li>
                         <li>
-                            <strong>1</strong> Decoder/Home theater</li>
+                            <strong></strong> Decoder/Home theater</li>
                     </ul>
                 </div>
             </div>
@@ -719,19 +719,19 @@ menu-active
                             <br />
                             <strong>1200ah</strong> Battery
                             <br />
-                            <strong>120amp</strong> Controller</span>
+                            <strong>160amp</strong> Controller</span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
-                            <strong>8</strong> Fans</li>
+                            <strong></strong> Fans &nbsp; Laptops</li>
 
                         <li>
                             <strong>1</strong> Freezer &nbsp;
-                            <strong>1</strong> washing machine</li>
+                            <strong></strong> Washing machine</li>
                         <li>
-                            <strong>35</strong> Lighting points &nbsp;
+                            <strong>All</strong> Light points &nbsp;
                             <strong>3</strong> AC(1HP)</li>
                         <li>
                             <strong>1</strong> Decoder/Home theater</li>
