--- a/templates/403.html
+++ b/templates/403.html
@@ -25,57 +25,51 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
 </head>
 <body>
-    <div class="review container-fluid padding">
-        <div class="row">
-            <div class="time col-xs-12 col-lg-3 col-md-6">
-                <p>
-                    <i class="far fa-clock"></i>Mon - Fri 9.00am - 6.00pm</p>
-            </div>
-            <div class="time col-xs-12 col-lg-2 col-md-6">
-                <p>
-                    <i class="fas fa-phone-alt"></i>(234)8029442697</p>
-            </div>
-            <div class="col-xs-12 col-lg-3 col-md-6">
-                <ol class="links">
-                    <li>
-                        <a href="https://www.linkedin.com/company/greensource-engineering-consult" id="linkedin">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/greensourceconsult/" id="facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/greensource_eng" id="instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.twitter.com/GreensourceC" id="twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                </ol>
-            </div>
-            <div class="book col-xs-12 col-lg-4 col-md-6">
-                <p>
-                    <i class="far fa-envelope"></i>
-                    <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
-                </p>
+    <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+            <div class="site-mobile-menu-close mt-3">
+                <span class="icon-close2 js-menu-toggle"></span>
             </div>
         </div>
+        <div class="site-mobile-menu-body"></div>
     </div>
-    <header id="header">
-        <div class="container">
-            <div id="logo" class="pull-left">
-                <a href="{% url 'index' %}">
-                    <img src="{% static 'images/greensourcelogo3.webp' %}" alt="company logo" />
-                </a>
+    <div class="site-navbar-wrap">
+        <div class="site-navbar-top">
+            <div class="container-fluid py-3">
+                <div class="row align-items-center">
+                    <div class="col-6">
+                        <div class="d-flex mr-auto">
+                            <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'
+                                class="d-flex align-items-center mr-4">
+                                <span class="icon-envelope mr-2"></span>
+                                <span class="d-none d-md-inline-block">hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</span>
+                            </a>
+                            <a href="#" class="d-flex align-items-center mr-auto">
+                                <span class="icon-phone mr-2"></span>
+                                <span class="d-none d-md-inline-block">+234 802 9442 697</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-6 text-right">
+                        <div class="mr-auto">
+                            <a href="https://www.twitter.com/greenn_energy" class="p-2 pl-0">
+                                <span class="icon-twitter"></span>
+                            </a>
+                            <a href="https://www.facebook.com/greensourcenergy/" class="p-2 pl-0">
+                                <span class="icon-facebook"></span>
+                            </a>
+                            <a href="https://www.linkedin.com/company/greensource-energy" class="p-2 pl-0">
+                                <span class="icon-linkedin"></span>
+                            </a>
+                            <a href="https://www.instagram.com/greensourcenergy" class="p-2 pl-0">
+                                <span class="icon-instagram"></span>
+                            </a>
+                        </div>
+    
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
+        </div>    
     <div class="container-fluid padding">
         <div class="error row padding">
             <div class="col-lg-12">
