--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -65,7 +65,7 @@
                         </a>
                         <a href="#" class="d-flex align-items-center mr-auto">
                             <span class="icon-phone mr-2"></span>
-                            <span class="d-none d-md-inline-block">+234 802 9442 697</span>
+                            <span class="d-none d-md-inline-block">+234 0913 290 9546</span>
                         </a>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                             <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                         </li>
                         <li>
-                            <p>0802-9442-697&nbsp;0807-6068-609</p>
+                            <p>0913 2909 546 |&nbsp;0807 6068 609</p>
                         </li>
                     </ul>
                     <h3>Follow us</h3>
@@ -338,7 +338,7 @@
               "name": "Greensource Energy Consult",
               "image": "https://greensourcenergy.com/static/images/greensourcelogo4.webp",
               "url": "https://www.greensourcenergy.com",
-              "telephone": "(234)802 9442 697",
+              "telephone": "(234)913 2909 546 | (234)807 6068 609",
               "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "1 heritage street btanobi noah, arogun",
@@ -375,7 +375,7 @@
           "ctaText":"Send Message",
           "borderRadius":"25",
           "autoShow":false,
-          "phoneNumber":"2348029442697"
+          "phoneNumber":"2349132909546"
       }
     };
         s.onload = function() {
