--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -54,22 +54,22 @@
 </div>
 <div class="site-navbar-wrap">
     <div class="site-navbar-top">
-        <div class="container-fluid py-3">
+        <div class="container py-3">
             <div class="row align-items-center">
-                <div class="col-6">
+                <div class="col-7">
                     <div class="d-flex mr-auto">
-                        <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'
+                        <a href='&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;'
                             class="d-flex align-items-center mr-4">
                             <span class="icon-envelope mr-2"></span>
-                            <span class="d-none d-md-inline-block">hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</span>
+                            <span class="d-none d-md-inline-block">&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;</span>
                         </a>
                         <a href="#" class="d-flex align-items-center mr-auto">
                             <span class="icon-phone mr-2"></span>
-                            <span class="d-none d-md-inline-block">+234 0913 290 9546</span>
+                            <span class="d-none d-md-inline-block">0913 290 9546</span>
                         </a>
                     </div>
                 </div>
-                <div class="col-6 text-right">
+                <div class="col-5 text-right">
                     <div class="mr-auto">
                         <a href="https://www.twitter.com/greenn_energy" class="p-2 pl-0">
                             <span class="icon-twitter"></span>
@@ -234,7 +234,7 @@
                             <p>1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
                         </li>
                         <li>
-                            <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
+                            <a href='&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;'>&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;</a>
                         </li>
                         <li>
                             <p>0913 2909 546 |&nbsp;0807 6068 609</p>
