--- a/static/home.css
+++ b/static/home.css
@@ -80,7 +80,7 @@ html body.offcanvas-menu:before {
 }
 .site-navbar .site-navigation .site-menu > li > a {
 	padding: 20px 10px;
-	color: rgba(255, 255, 255, 0.6);
+	color: rgba(225, 225, 225);
 	font-size: 15px;
 	text-decoration: none !important; 
 }
