--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <p>     
-                 Greensource Energy Consult is an emerging alternative energy company. Starting has a side hustle and incorporated with the
+                Greensource Energy Consult is an emerging alternative energy company. Starting has a side hustle and incorporated with the
                 Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting edge innovation
                 to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated over 50KW of
                 energy for both off-grid and grid connected systems application. We offer a full-service portfolio for solar projects which
@@ -389,7 +389,7 @@
         <div class="row team-area owl-carousel owl-theme" id="team-one">
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
-                    <!-- <img src="{% static 'images/ceeeo.webp' %}" alt="C.E.O"> -->
+                    <img src="{% static 'images/ce.webp' %}" alt="C.E.O">
                     <div class="team-text">
                         <h5>Olumide Joseph</h5>
                         <p>MD/CEO</p>
@@ -407,7 +407,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <!-- <img src="{% static 'images/tolaa.webp' %}" alt="Lead Engineer">  -->
+                    <img src="{% static 'images/to.webp' %}" alt="Lead Engineer"> 
                     <div class="team-text">
                         <h5>Adeyemi Tola</h5>
                         <p>Lead Engineer</p>
