--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -156,10 +156,10 @@
             </div>
             <div class="abt-info col-lg-6 col-md-6 col-xs-12">
                 <p class="active">
-                    At Greensource Energy Consult, our goal is to offer quality solar products and standard delivery services, keeping an eye
-                    on the latest trends in the industry, putting our customer’s wishes first. This is made possible by our
-                    team of young and motivated engineers. We believe in great bargains and excellent service, which is why
-                    we commit ourselves to giving you the best of both...
+                Greensource Energy Consult is an emerging alternative energy company. Starting has a side hustle and incorporated with the
+                Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting edge innovation
+                to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated over 50KW of
+                energy for both off-grid and grid connected systems application...
                 </p>
                 <a href="{% url 'about' %}">Read More</a>
                 <div class="xtravite">
