--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -38,7 +38,7 @@
         {% endfor %}
 
         {% else %}
-        <p>There are no recent project</p>
+        <p>There are no recent projects</p>
         {%  endif %}
     </div>
 </div>
