--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -56,7 +56,7 @@
             </div>
             <span data-toggle="counter-up">100</span>
             <span class="sign">+</span>
-            <h6>Panels Installed</h6>
+            <h6>Modules Installed</h6>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
@@ -64,7 +64,7 @@
             </div>
             <span data-toggle="counter-up">35</span>
             <span class="sign">+</span>
-            <h6>Projects Done</h6>
+            <h6>Projects Completed</h6>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
@@ -72,7 +72,7 @@
             </div>
             <span data-toggle="counter-up">50</span>
             <span class="sign">+</span>
-            <h6>KWs Generated</h6>
+            <h6>KiloWatt Generated</h6>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
@@ -80,7 +80,7 @@
             </div>
             <span data-toggle="counter-up">28</span>
             <span class="sign">+</span>
-            <h6>Customer Base</h6>
+            <h6>Client's Database</h6>
         </div>
     </div>
 </div>
