--- a/greensource_pages/templates/greensource_pages/project-details.html
+++ b/greensource_pages/templates/greensource_pages/project-details.html
@@ -50,7 +50,7 @@
     <div class="container-fluid padding">
         <div class="brand-carousel-wrapper padding">
             <div class="pro-details row">
-                <div class="brand-carousel-one owl-theme owl-carousel">
+                <div class="owl-theme owl-carousel" id="pro-img">
                     <div class="item">
                         <a href="{{ obj.image1.url }}">
                             <img src="{{ obj.image1.url }}" alt="img" />
