--- a/static/home.css
+++ b/static/home.css
@@ -1274,25 +1274,15 @@ nav .breadcrumb li a:hover{
 	padding: 20px 20px;
 }  
 .pro-details{
-	margin-top: 0px;
+	margin-top: 50px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
-.brand-carousel-one{
+.pro-details img{
 	width: 100%;
-	margin-top: 0px;
-}
-.brand-carousel-one .item{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 5px;
-	overflow: hidden;
-	white-space: normal;
-}
-.brand-carousel-one .item img{
-	width: 100%;
-	height: 200px;
+	height: 50vh;
+	padding-bottom: 25px;
 }
 /*--------------------------------------------------------------
 # TEAM SECTION
@@ -2933,6 +2923,10 @@ nav .pagination a:hover{
 	.portfolio .image-block > img {
 		height: 50vh;
 	}
+	.pro-details img{
+		width: 70%;
+		height: 55vh;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		991px
@@ -3333,6 +3327,10 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;
 	}
+	.pro-details img{
+		width: 70%;
+		height: 55vh;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		767px
@@ -3711,6 +3709,10 @@ nav .pagination a:hover{
 	.FAQS .card .card-body{
 		font-size: 15px;
 		text-align: justify;
+	}
+	.pro-details img{
+		width: 70%;
+		height: 55vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -4123,6 +4125,10 @@ nav .pagination a:hover{
 		width: 65%;
 		height: 55vh;
 	}
+	.pro-details img{
+		width: 70%;
+		height: 55vh;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		480px
@@ -4156,15 +4162,16 @@ nav .pagination a:hover{
 	}
 	.colum .colum-body{
 		display: block;
+		width: 120%;
 		margin-top: 5px;
 		margin-bottom: 5px;
 	}
-	.colum-body p{
+	.colum-body .counter-up{
 		width: 120%;
 		font-size: 13px;
 	}
 	.colum-body h6{
-		width: 120%;
+		width: 100%;
 		font-size: 15px;
 	}
 	.service p{
@@ -4553,6 +4560,10 @@ nav .pagination a:hover{
 		width: 85%;
 		height: 55vh;
 	}
+	.pro-details img{
+		width: 70%;
+		height: 55vh;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		375px
@@ -4602,7 +4613,7 @@ nav .pagination a:hover{
 	}
 	.colum .colum-body{
 		display: block;
-		width: 70%;
+		width: 100%;
 		margin-left: auto;
 		margin-right:auto;
 	}
@@ -5025,6 +5036,10 @@ nav .pagination a:hover{
 		margin-right: auto;
 		width: 85%;
 		height: 55vh;
+	}
+	.pro-details img{
+		width: 50%;
+		height: 50vh;
 	}
 }
 /*--------------------------------------------------------------
