--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -21,7 +21,7 @@
 <div class=" container-fluid padding page-header">
     <h1>We Are Developers And Operators Of Sustainable Energy Solution</h1>
 </div>
-<div class="container padding">
+<div class="container-fluid padding">
     <div class="about-us row padding">
         <div class="col">
             <div class="wow fadeIn" data-wow-duration="3s" data-wow-delay="0.3s" data-wow-offset="0">
@@ -46,7 +46,6 @@
         </div>
     </div>
 </div>
-
 <section>
     <div class="container-fluid padding">
         <div class="service col-12">
