--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -192,8 +192,8 @@
             <p>Our Range of Solar Services</p>
         </div>
     </div>
-    <div class="container padding">
-        <div class="owl-carousel service-style-one">
+    <div class="container-fluid padding">
+        <div class="owl-carousel service-style-one" id="services">
             <div class="item">
                 <div class="single-service-style-three">
                     <div class="text-block">
