--- a/static/home.css
+++ b/static/home.css
@@ -296,6 +296,7 @@ html body.offcanvas-menu:before {
 }
 .site-mobile-menu .site-nav-wrap a.active, .site-mobile-menu .site-nav-wrap a:hover {
 	color: #2dc977; 
+	text-decoration: none; 
 }
 .site-mobile-menu .site-nav-wrap li {
 	position: relative;
@@ -424,6 +425,7 @@ html body.offcanvas-menu:before {
 }
 .sticky-wrapper.is-sticky .site-navbar .site-navigation .site-menu > li > a:hover {
 	color: #2dc977 !important; 
+	text-decoration: none; 
 }
 .sticky-wrapper.is-sticky .site-navbar .site-navigation .site-menu > li.active a {
 	color: #2dc977; 
@@ -2774,6 +2776,9 @@ nav .pagination a:hover{
 # MEDIA SCREENS / BREAK POINTS		1199px
 --------------------------------------------------------------*/
 @media only screen and (max-width: 1199px) {
+	.page-header h1{
+		width: 100%;
+	}
 	.header h1{
 		font-size: 25px;
 	}
@@ -2924,8 +2929,8 @@ nav .pagination a:hover{
 		height: 50vh;
 	}
 	.pro-details img{
-		width: 70%;
-		height: 55vh;
+		width: 50%;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -2951,14 +2956,20 @@ nav .pagination a:hover{
 		font-size: 15px;
 		padding: 10px 10px;
 	}
+	.header{
+		height: 40vh;
+	}
 	.header h1{
 		font-size: 22px;
 	}
 	.header h2{
 		font-size: 16px;
 	}
+	.service{
+		margin-top: 50px;
+	}
 	.service h5{
-		margin-top: 250px;
+		margin-top: 0px;
 		font-size: 16px;
 	}
 	.service p{
@@ -2986,7 +2997,7 @@ nav .pagination a:hover{
 	}
 	.about img{
 		width: 100%;
-		height: 90%;
+		height: 45vh;
 		padding: 0;
 	}
 	.about .active{
@@ -3089,6 +3100,9 @@ nav .pagination a:hover{
 	}
 	.card button{
 		font-size: 17px;
+	}
+	.card-cover .card{
+		margin-bottom: 40px;
 	}
 	.details h4{
 		font-size: 35px;
@@ -3304,6 +3318,7 @@ nav .pagination a:hover{
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 180px;
 	}
 	.choose1{
 		left: -25%;
@@ -3328,8 +3343,8 @@ nav .pagination a:hover{
 		margin-right: auto;
 	}
 	.pro-details img{
-		width: 70%;
-		height: 55vh;
+		width: 50%;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -3359,8 +3374,11 @@ nav .pagination a:hover{
 		font-size: 15px;
 		padding: 10px 7px;
 	}
+	.service{
+		margin-top: 50px;
+	}
 	.service h5{
-		margin-top: 250px;
+		margin-top: 0px;
 		font-size: 16px;
 	}
 	.service p{
@@ -3478,10 +3496,11 @@ nav .pagination a:hover{
 	}
 	.single-team{
 		width: 100%;
-		height: 55vh;
+		height: 50vh;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		padding-bottom: 45px;
 	}
 	.articles .news{
 		display: inline-block;
@@ -3669,7 +3688,7 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
-		width: 80%;
+		width: 100%;
 	}
 	.people-one{
 		margin-left: auto;
@@ -3683,7 +3702,7 @@ nav .pagination a:hover{
 		margin-top: 50px;
 	}
 	.choose2{
-		right: 8%;
+		left: 3%;
 		width: 45%;
 		height: 150px;
 		margin-top: 50px;
@@ -3711,8 +3730,8 @@ nav .pagination a:hover{
 		text-align: justify;
 	}
 	.pro-details img{
-		width: 70%;
-		height: 55vh;
+		width: 50%;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -3748,12 +3767,15 @@ nav .pagination a:hover{
 	.header h2{
 		font-size: 15px;
 	}
+	.service{
+		margin-top: 50px;
+	}
 	.service p{
 		margin-top: 0px;
 		font-size: 18px;
 	}
 	.service h5{
-		margin-top: 200px;
+		margin-top: 0px;
 		font-size: 15px;
 	}
 	.counter-heading h5{
@@ -3881,7 +3903,7 @@ nav .pagination a:hover{
 	}
 	.single-team{
 		width: 70%;
-		height: 70vh;
+		height: 55vh;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -4083,19 +4105,19 @@ nav .pagination a:hover{
 	}
 	.choose1{
 		left: 8%;
-		width: 40%;
+		width: 45%;
 		height: 150px;
 		margin-top: 50px;
 	}
 	.choose2{
-		right: 8%;
-		width: 40%;
+		left: 3%;
+		width: 45%;
 		height: 150px;
 		margin-top: 50px;
 	}
 	.choose3{
 		left: 8%;
-		width: 80%;
+		width: 92%;
 		height: 150px;
 		margin-top: 210px;
 	}
@@ -4126,8 +4148,8 @@ nav .pagination a:hover{
 		height: 55vh;
 	}
 	.pro-details img{
-		width: 70%;
-		height: 55vh;
+		width: 50%;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -4174,12 +4196,19 @@ nav .pagination a:hover{
 		width: 100%;
 		font-size: 15px;
 	}
+	.header p{
+		margin-top: 200px;
+		font-size: 22px;
+	}
+	.service{
+		margin-top: 50px;
+	}
 	.service p{
 		font-size: 17px;
 		margin-top: 0px;
 	}
 	.service h5{
-		margin-top: 250px;
+		margin-top: 0px;
 		font-size: 15px;
 	}
 	.about img{
@@ -4265,7 +4294,7 @@ nav .pagination a:hover{
 	}
 	.single-team{
 		width: 85%;
-		height: 65vh;
+		height: 50vh;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -4561,8 +4590,8 @@ nav .pagination a:hover{
 		height: 55vh;
 	}
 	.pro-details img{
-		width: 70%;
-		height: 55vh;
+		width: 50%;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -4600,12 +4629,8 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right:auto;
 	}
-	.header{
-		height: 200px;
-		width: auto;
-	}
 	.header p{
-		margin-top: 150px;
+		margin-top: 200px;
 		font-size: 18px;
 	}
 	.colum{
@@ -4665,12 +4690,15 @@ nav .pagination a:hover{
 		font-size: 15px;
 		margin-left: 0px;
 	}
+	.service{
+		margin-top: 50px;
+	}
 	.service p{
 		font-size: 16px;
 		margin-top: 0px;
 	}
 	.service h5{
-		margin-top: 200px;
+		margin-top: 0px;
 		font-size: 15px;
 	}
 	.benefits-body{
@@ -4701,8 +4729,8 @@ nav .pagination a:hover{
 		width: 100%;
 	}
 	.single-team{
-		width: 90%;
-		height: 65vh;
+		width: 85%;
+		height: 50vh;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;	
@@ -4993,6 +5021,12 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;
 	}
+	.choose{
+		width: 100%;
+	}
+	.choose-body{
+		width: 100%;
+	}
 	.choose1{
 		left: 2%;
 		width: 49%;
@@ -5039,7 +5073,7 @@ nav .pagination a:hover{
 	}
 	.pro-details img{
 		width: 50%;
-		height: 50vh;
+		height: 40vh;
 	}
 }
 /*--------------------------------------------------------------
@@ -5086,12 +5120,8 @@ nav .pagination a:hover{
 	.colum{
 		margin-top: 0px;
 	}
-	.header{
-		height: 200px;
-		width: auto;
-	}
 	.header p{
-		margin-top: 150px;
+		margin-top: 200px;
 		font-size: 18px;
 	}
 	.about img{
@@ -5147,7 +5177,7 @@ nav .pagination a:hover{
 	.choose-body p{
 		font-size: 14px;
 		text-align: justify;
-		width: 98%;
+		width: 95%;
 	}
 	.choose-body{
 		margin-left: -5px;
@@ -5159,12 +5189,15 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;	
 	}
+	.service{
+		margin-top: 50px;
+	}
 	.service p{
 		font-size: 16px;
 		margin-top: 0px;
 	}
 	.service h5{
-		margin-top: 200px;
+		margin-top: 0px;
 		font-size: 15px;
 	}
 	.single-service-style-three{
@@ -5199,7 +5232,7 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
-		height: 60vh;
+		height: 50vh;
 	}
 	#call-to-action h3 a{
 		display: block;
